feat: prepare 0.5.0 release
